--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "themes/osprey"]
 	path = themes/osprey
-	url = https://github.com/tomanistor/osprey.git
+url=https://github.com/viccat54/osprey.git
