--- a/config.toml
+++ b/config.toml
@@ -20,6 +20,7 @@ disableKinds = ["taxonomy", "taxonomyTerm"] # This theme does not currently use 
   email = ""
   googleTagManger = ""
   customCSS = true
+  customJS = true
 
   # Social media links in footer
   twitter = ""
